
<resources>
    <string name="app_name">Inventory</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="description">Description:</string>
    <string name="brand">Brand:</string>
    <string name="category">Category:</string>
    <string name="image">Image:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_description_req">Item Description <font color='#FF0000'>*</font></string>
    <string name="item_brand_req">Item Brand <font color='#FF0000'>*</font></string>
    <string name="item_image_req">Item Image <font color='#FF0000'>*</font></string>
    <string name="item_category_req">Item Category <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">CONFIRMACION PARA ELIMINAR</string>
    <string name="no">No</string>
    <string name="Si">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
</resources>
